# behemoth

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  ctl.cpp  demo.cpp  ltl.cpp
include/: CMakeLists.txt
include/behemoth/: enumerator.hpp  expr.hpp
lib/: CMakeLists.txt
